recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:6: error: type mismatch;
 found   : List[Int]
 required: Int
    reverse(l.tail) :: l.head :: reverse(l.tail);
                    ^