recursion.cons.reverse.Reverse.scala.code
def reverse(l:List[Int]): List[Int] = {
  if(l==Nil){
    return Nil;
  }else{
    reverse(l.tail) :: l.head :: reverse(l.tail);
  }
}